--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
         <input id="dollars" type="number" required>
         <br>
         <label for="calendar">Date:</label>
-        <input id="calendar" min="1913-01-01" type="date" required>
+        <input id="calendar" min="1913-01" type="month" required>
         <br>
         <button type="submit">Convert</button>
         <br>
@@ -24,6 +24,7 @@
 
       <span>USD Adjusted: </span>
       <span id="output"></span>
+      <br>
       <span id="error"></span>
     </main>
   </body>
