--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="fc">
     <header>
       <h1>Inflation Calculator</h1>
       <span id="subheader">
@@ -11,21 +11,22 @@
     </header>
 
     <main>
-      <form>
-        <label for="dollars">USD:</label>
-        <input id="dollars" type="number" required>
-        <br>
-        <label for="calendar">Date:</label>
-        <input id="calendar" min="1913-01" type="month" required>
-        <br>
+      <form class="fc">
+        <div class="input-group">
+          <label for="dollars">USD:</label>
+          <input id="dollars" type="number" required>
+        </div>
+        <div class="input-group">
+          <label for="calendar">Date:</label>
+          <input id="calendar" min="1913-01" type="month" required>
+        </div>
         <button type="submit">Convert</button>
-        <br>
       </form>
 
-      <span>USD Adjusted: </span>
-      <span id="output"></span>
-      <br>
-      <span id="error"></span>
+      <div class="fc" id="results">
+        <span>USD Adjusted: <span id="output"></span></span>
+        <span id="error">test</span>
+      </div>
     </main>
   </body>
   <script src="script.js"></script>
