added background image to extension

--- a/calculator.html
+++ b/calculator.html
@@ -3,10 +3,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="fc">
+    <div class="background"></div>
     <header>
       <h1>Inflation Calculator</h1>
       <span id="subheader">
-        <em>Given a date and $ amount, adjust for inflation!</em>
+        <em>Given a USD amount and date, adjust for inflation!</em>
       </span>
     </header>
 
