--- a/calculator.html
+++ b/calculator.html
@@ -25,14 +25,20 @@
         </div>
         <div class="input-group">
           <label for="calendar">Date:</label>
-          <input id="calendar" type="text" placeholder="MM/YYYY" required>
+          <input 
+            id="calendar"
+            maxlength="7" 
+            type="text" 
+            placeholder="MM/YYYY" 
+            required
+          >
         </div>
         <span id="calendar-error" class="error"></span>
         <button type="submit">Convert</button>
       </form>
 
       <div class="fc" id="results">
-        <span>USD Adjusted: <span id="output"></span></span>
+        <span id="result">USD Adjusted: <span id="output"></span></span>
         <span id="error" class="error"></span>
       </div>
     </main>
