added styling to submit button

--- a/calculator.html
+++ b/calculator.html
@@ -36,7 +36,7 @@
           >
         </div>
         <span id="calendar-error" class="error"></span>
-        <button type="submit">Convert</button>
+        <button id="submit-btn" type="submit">Convert</button>
       </form>
 
       <div class="fc">
