--- a/calculator.html
+++ b/calculator.html
@@ -7,14 +7,14 @@
     <header>
       <h1>Inflation Calculator</h1>
       <span id="subheader">
-        <em>Given a USD amount and date, adjust for inflation!</em>
+        <em>Given a price and date, adjust for inflation!</em>
       </span>
     </header>
 
     <main>
       <form class="fc">
         <div class="input-group">
-          <label for="dollars">USD:</label>
+          <label for="dollars">Price:</label>
           <input 
             id="dollars"
             type="number"
@@ -26,7 +26,7 @@
           >
         </div>
         <div class="input-group">
-          <label for="calendar">Date:</label>
+          <label for="calendar">Date:&nbsp;</label>
           <input 
             id="calendar"
             maxlength="7" 
@@ -34,14 +34,15 @@
             placeholder="MM/YYYY" 
             required
           >
+          <br>
+          <span id="calendar-error" class="error"></span>
         </div>
-        <span id="calendar-error" class="error"></span>
         <button id="submit-btn" type="submit">Convert</button>
       </form>
 
       <div class="fc">
         <div id="result" class="sb">
-          <span id="text">USD Adjusted: <span id="output"></span></span>
+          <span id="text">Price Adjusted: <span id="output"></span></span>
           <button type="button" class="copy-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" version="1.1" viewBox="0 0 210.107 210.107" xmlSpace="preserve">
               <path fill="#1D1D1B" d="M168.506 0H80.235C67.413 0 56.981 10.432 56.981 23.254v2.854h-15.38c-12.822 0-23.254 10.432-23.254 23.254v137.492c0 12.822 10.432 23.254 23.254 23.254h88.271c12.822 0 23.253-10.432 23.253-23.254V184h15.38c12.822 0 23.254-10.432 23.254-23.254V23.254C191.76 10.432 181.328 0 168.506 0zm-30.38 186.854c0 4.551-3.703 8.254-8.253 8.254H41.601c-4.551 0-8.254-3.703-8.254-8.254V49.361c0-4.551 3.703-8.254 8.254-8.254h88.271c4.551 0 8.253 3.703 8.253 8.254v137.493zm38.634-26.108c0 4.551-3.703 8.254-8.254 8.254h-15.38V49.361c0-12.822-10.432-23.254-23.253-23.254H71.981v-2.854c0-4.551 3.703-8.254 8.254-8.254h88.271c4.551 0 8.254 3.703 8.254 8.254v137.493z"></path>
